added own test framework, with passing test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <script src="view/notes-view.js"></script>
     <script src="notes-model.js"></script>
     <script src="notes-controller.js"></script>
+    <script src="spec/notes_spec.js"></script>
+    <script src="spec/specRunner.js"></script>
+
     <title></title>
   </head>
   <body>
