split view into multiple pages, added nav, display, list, views

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="utf-8">
     <script src="app.js"></script>
-    <script src="view/notes-view.js"></script>
+    <script src="view/viewMain.js"></script>
+    <script src="view/navigation.js"></script>
+    <script src="view/addnotes.js"></script>
+    <script src="view/listNotes.js"></script>
+    <script src="view/displayNotes.js"></script>
     <script src="notes-model.js"></script>
     <script src="notes-controller.js"></script>
     <script src="spec/notes_spec.js"></script>
@@ -11,7 +15,7 @@
     <title></title>
   </head>
   <body>
-
+    <div id="navigation"></div>
     <div id="htmlBody"></div>
 
   </body>
