--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="view/addnotes.js"></script>
     <script src="view/listNotes.js"></script>
     <script src="view/displayNotes.js"></script>
+    <script src="view/removeHtml.js"></script>
     <script src="notes-model.js"></script>
     <script src="notes-controller.js"></script>
     <script src="spec/notes_spec.js"></script>
