--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="app.js"></script>
     <script src="view/viewMain.js"></script>
     <script src="view/navigation.js"></script>
-    <script src="view/addnotes.js"></script>
+    <script src="view/displayNoteInput.js"></script>
     <script src="view/listNotes.js"></script>
     <script src="view/displayNotes.js"></script>
     <script src="view/removeHtml.js"></script>
@@ -18,6 +18,7 @@
   <body>
     <div id="navigation"></div>
     <div id="htmlBody"></div>
+    <div id="something"></div>
 
   </body>
 </html>
