added hash listener, unfinished

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div id="navigation"></div>
     <div id="htmlBody"></div>
-    <div id="something"></div>
+    <div id="anote"></div>
 
   </body>
 </html>
